Add prelaod imgs to rest of pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@ permalink: /connect/contact/
 redirect_from:
   - /hire-us/
   - /alliances/
+preload: hero-contact-us.svg
 ---
 
 {% include hero_banner.html
