--- a/pages/join.html
+++ b/pages/join.html
@@ -4,6 +4,7 @@ title: Join Us
 permalink: /careers/join/
 redirect_from: /join/
 hero_content: Help us change the way government works.
+preload: hero-join-us.svg
 ---
 
 {% include hero_banner.html
