--- a/pages/services.html
+++ b/pages/services.html
@@ -9,6 +9,7 @@ redirect_from:
   - /services/microconsulting/
   - /services/microconsulting/apis/
 cta: /connect/contact/
+preload: hero-services.svg
 ---
 
 {% include hero_banner.html
