--- a/pages/training.html
+++ b/pages/training.html
@@ -2,6 +2,7 @@
 layout: default
 title: Training
 permalink: /work/services/training/
+preload: hero-training.svg
 ---
 
 {% include hero_banner.html
