--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -2,6 +2,7 @@
 layout: default
 title: Contracting
 permalink: /connect/contracting/
+preload: hero-contracting.svg
 ---
 
 {% include hero_banner.html
