Prep services page for images

--- a/pages/services.html
+++ b/pages/services.html
@@ -28,6 +28,7 @@ preload: hero-services.svg
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Delight your users</a>
         </div>
         <div class="col-sm-6">
+          <!-- <img src="{{ site.baseurl }}/img/services-service-delivery.svg" alt=""> -->
         </div>
       </div>
 
@@ -61,6 +62,7 @@ preload: hero-services.svg
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Buy better</a>
         </div>
         <div class="col-sm-6">
+          <!-- <img src="{{ site.baseurl }}/img/services-procurement.svg" alt=""> -->
         </div>
       </div>
 
@@ -93,6 +95,9 @@ preload: hero-services.svg
           <p><b>"Going digital" is about people first and technology second.</b> We possess first-hand experience with embedding digital expertise throughout government organizations, and putting the operating principles, structures, and tools in place to unleash the superpowers of high-caliber digital teams.</p>
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Transform now</a>
         </div>
+        <div class="col-sm-6">
+          <!-- <img src="{{ site.baseurl }}/img/services-transformation.svg" alt=""> -->
+        </div>
       </div>
 
       <div class="row mt-5 text">
@@ -124,6 +129,9 @@ preload: hero-services.svg
           <p><b>Need immediate, high-impact support to address a problem or opportunity that doesn't require a full-blown engagement?</b> Our microconsulting services are designed specifically for that purpose, providing you with on-demand access to our expertise. They're also conveniently priced within the government's micropurchase threshold, which makes engaging with us just a “swipe of the credit card away.”</p>
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Engage now</a>
         </div>
+        <div class="col-sm-6">
+          <!-- <img src="{{ site.baseurl }}/img/services-microconsulting.svg" alt=""> -->
+        </div>
       </div>
 
       <div class="row mt-5 text">
@@ -154,6 +162,9 @@ preload: hero-services.svg
           <h2>Training</h2>
           <p><b>Get the skills you need to make your digital transformation a success.</b> Regardless of mission, all government agencies are now technology organizations. We offer a variety of training options to help you develop and grow your digital skills.</p>
           <a class="btn btn-primary-dark font-weight-bold" href="/work/services/training/">Level up</a>
+        </div>
+        <div class="col-sm-6">
+          <!-- <img src="{{ site.baseurl }}/img/services-training.svg" alt=""> -->
         </div>
       </div>
 
