Add services images

--- a/pages/services.html
+++ b/pages/services.html
@@ -28,7 +28,7 @@ preload: hero-services.svg
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Delight your users</a>
         </div>
         <div class="col-sm-6">
-          <!-- <img src="{{ site.baseurl }}/img/services-service-delivery.svg" alt=""> -->
+          <img src="{{ site.baseurl }}/img/services-service-delivery.jpg" alt="">
         </div>
       </div>
 
@@ -62,7 +62,7 @@ preload: hero-services.svg
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Buy better</a>
         </div>
         <div class="col-sm-6">
-          <!-- <img src="{{ site.baseurl }}/img/services-procurement.svg" alt=""> -->
+          <img src="{{ site.baseurl }}/img/services-procurement.jpg" alt="">
         </div>
       </div>
 
@@ -96,7 +96,7 @@ preload: hero-services.svg
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Transform now</a>
         </div>
         <div class="col-sm-6">
-          <!-- <img src="{{ site.baseurl }}/img/services-transformation.svg" alt=""> -->
+          <img src="{{ site.baseurl }}/img/services-transformation.jpg" alt="">
         </div>
       </div>
 
@@ -130,7 +130,7 @@ preload: hero-services.svg
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Engage now</a>
         </div>
         <div class="col-sm-6">
-          <!-- <img src="{{ site.baseurl }}/img/services-microconsulting.svg" alt=""> -->
+          <img src="{{ site.baseurl }}/img/services-microconsulting.jpg" alt="">
         </div>
       </div>
 
@@ -164,7 +164,7 @@ preload: hero-services.svg
           <a class="btn btn-primary-dark font-weight-bold" href="/work/services/training/">Level up</a>
         </div>
         <div class="col-sm-6">
-          <!-- <img src="{{ site.baseurl }}/img/services-training.svg" alt=""> -->
+          <img src="{{ site.baseurl }}/img/services-training-2.jpg" alt="">
         </div>
       </div>
 
