--- a/pages/services.html
+++ b/pages/services.html
@@ -22,12 +22,12 @@ preload: hero-services.svg
   <div class="">
     <div class="container prose">
       <div class="row">
-        <div class="col-sm-6 order-2 order-md-1 mt-4 mt-md-0">
+        <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
           <h2>Service Delivery</h2>
           <p><b>Today's public expects their interactions with the government to be delightful, secure, and empowering.</b> We specialize in creating exceptional user experiences and enduring solution architectures out of your most complex design and technology challenges.</p>
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Delight your users</a>
         </div>
-        <div class="col-sm-6 order-1 order-md-2">
+        <div class="col-md-6 order-1 order-md-2">
           <img src="{{ site.baseurl }}/img/services-service-delivery.jpg" alt="">
         </div>
       </div>
@@ -56,12 +56,12 @@ preload: hero-services.svg
   <div class="mt-5 bg-gray-light py-5">
     <div class="container prose">
       <div class="row">
-        <div class="col-sm-6 order-2 order-md-1 mt-4 mt-md-0">
+        <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
           <h2>Procurement</h2>
           <p><b>To support digital progress, procurement must change.</b> We combine technical and acquisition brains to make procurement work for you in the digital age. That means greater collaboration with vendors, faster delivery of value, higher quality results, lower costs, and more breakthrough innovations.</p>
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Buy better</a>
         </div>
-        <div class="col-sm-6 order-1 order-md-2">
+        <div class="col-md-6 order-1 order-md-2">
           <img src="{{ site.baseurl }}/img/services-procurement.jpg" alt="">
         </div>
       </div>
@@ -90,12 +90,12 @@ preload: hero-services.svg
   <div class="mt-5">
     <div class="container prose">
       <div class="row">
-        <div class="col-sm-6 order-2 order-md-1 mt-4 mt-md-0">
+        <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
           <h2>Transformation</h2>
           <p><b>"Going digital" is about people first and technology second.</b> We possess first-hand experience with embedding digital expertise throughout government organizations, and putting the operating principles, structures, and tools in place to unleash the superpowers of high-caliber digital teams.</p>
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Transform now</a>
         </div>
-        <div class="col-sm-6 order-1 order-md-2">
+        <div class="col-md-6 order-1 order-md-2">
           <img src="{{ site.baseurl }}/img/services-transformation.jpg" alt="">
         </div>
       </div>
@@ -124,12 +124,12 @@ preload: hero-services.svg
   <div class="mt-5 bg-gray-light py-5">
     <div class="container prose">
       <div class="row">
-        <div class="col-sm-6 order-2 order-md-1 mt-4 mt-md-0">
+        <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
           <h2>Microconsulting</h2>
           <p><b>Need immediate, high-impact support to address a problem or opportunity that doesn't require a full-blown engagement?</b> Our microconsulting services are designed specifically for that purpose, providing you with on-demand access to our expertise. They're also conveniently priced within the government's micropurchase threshold, which makes engaging with us just a “swipe of the credit card away.”</p>
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Engage now</a>
         </div>
-        <div class="col-sm-6 order-1 order-md-2">
+        <div class="col-md-6 order-1 order-md-2">
           <img src="{{ site.baseurl }}/img/services-microconsulting.jpg" alt="">
         </div>
       </div>
@@ -158,12 +158,12 @@ preload: hero-services.svg
   <div class="mt-5">
     <div class="container prose">
       <div class="row">
-        <div class="col-sm-6 order-2 order-md-1 mt-4 mt-md-0">
+        <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
           <h2>Training</h2>
           <p><b>Get the skills you need to make your digital transformation a success.</b> Regardless of mission, all government agencies are now technology organizations. We offer a variety of training options to help you develop and grow your digital skills.</p>
           <a class="btn btn-primary-dark font-weight-bold" href="/work/services/training/">Level up</a>
         </div>
-        <div class="col-sm-6 order-1 order-md-2">
+        <div class="col-md-6 order-1 order-md-2">
           <img src="{{ site.baseurl }}/img/services-training-2.jpg" alt="">
         </div>
       </div>
