Update delivery img

--- a/pages/services.html
+++ b/pages/services.html
@@ -28,7 +28,7 @@ preload: hero-services.svg
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Delight your users</a>
         </div>
         <div class="col-md-6 order-1 order-md-2">
-          <img src="{{ site.baseurl }}/img/services-service-delivery.jpg" alt="A delivery man delivering a package to a family">
+          <img src="{{ site.baseurl }}/img/services-service-delivery.png" alt="A delivery man delivering a package to a family">
         </div>
       </div>
 
