--- a/pages/services.html
+++ b/pages/services.html
@@ -28,7 +28,7 @@ preload: hero-services.svg
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Delight your users</a>
         </div>
         <div class="col-md-6 order-1 order-md-2">
-          <img src="{{ site.baseurl }}/img/services-service-delivery.png" alt="A delivery man delivering a package to a family">
+          <img src="{{ site.baseurl }}/img/services-service-delivery.svg" alt="A delivery man delivering a package to a family">
         </div>
       </div>
 
@@ -62,7 +62,7 @@ preload: hero-services.svg
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Buy better</a>
         </div>
         <div class="col-md-6 order-1 order-md-2">
-          <img src="{{ site.baseurl }}/img/services-procurement.png" alt="Three people sketching and working through a problem together">
+          <img src="{{ site.baseurl }}/img/services-procurement.svg" alt="Three people sketching and working through a problem together">
         </div>
       </div>
 
@@ -96,7 +96,7 @@ preload: hero-services.svg
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Transform now</a>
         </div>
         <div class="col-md-6 order-1 order-md-2">
-          <img src="{{ site.baseurl }}/img/services-transformation.png" alt="Someone operating a conveyor belt that's transforming old computers into modern laptops">
+          <img src="{{ site.baseurl }}/img/services-transformation.svg" alt="Someone operating a conveyor belt that's transforming old computers into modern laptops">
         </div>
       </div>
 
@@ -130,7 +130,7 @@ preload: hero-services.svg
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Engage now</a>
         </div>
         <div class="col-md-6 order-1 order-md-2">
-          <img src="{{ site.baseurl }}/img/services-microconsulting.png" alt="A few people collaborating on a large project (small people holding big pencils, filling out a larger than life chart)">
+          <img src="{{ site.baseurl }}/img/services-microconsulting.svg" alt="A few people collaborating on a large project (small people holding big pencils, filling out a larger than life chart)">
         </div>
       </div>
 
@@ -164,7 +164,7 @@ preload: hero-services.svg
           <a class="btn btn-primary-dark font-weight-bold" href="/work/services/training/">Level up</a>
         </div>
         <div class="col-md-6 order-1 order-md-2">
-          <img src="{{ site.baseurl }}/img/services-training.png" alt="Three people working on a whiteboard on a digital tree">
+          <img src="{{ site.baseurl }}/img/services-training.svg" alt="Three people working on a whiteboard on a digital tree">
         </div>
       </div>
 
