change culture url to values

--- a/pages/values.html
+++ b/pages/values.html
@@ -1,18 +1,18 @@
 ---
 layout: default
-title: Our Culture
-permalink: /company/culture/
+title: Our Values
+permalink: /company/values/
 redirect_from: /culture/
-preload: hero-culture.svg
+preload: hero-values.svg
 ---
 
 {% include hero_banner.html
   hero_content = "Our values are the core of our culture, informing our thoughts, words, and actions."
   color = 'primary'
-  image = 'hero-culture.svg'
+  image = 'hero-values.svg'
 %}
 
-<div class="our-culture">
+<div class="our-values">
   <div class="values">
     <div class="values-row">
       {% assign values = site.data.values | sort: 'order' %}
