--- a/pages/join.html
+++ b/pages/join.html
@@ -228,7 +228,7 @@ preload: hero-join-us.svg
         <p>
           The interview process begins with a 15-minute or 30-minute preliminary screening
           call by phone or video. Plan to talk about your skills and experience, what
-          you're passionate about, and the work we do here. The call will also cover
+          you're passionate about, and what Skylight is like. The call will also cover
           the interview process, structure, basic employment requirements, and
           employee benefits. If the preliminary screening call goes well, we'll
           schedule you for a skills interview and a behavioral interview. Both interviews
