--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -62,20 +62,10 @@ preload: hero-toolkits.svg
     These toolkits are managed by our Communities of Practice. Communities
     are organized groups within Skylight who are passionate about developing
     and sharing our expertise with the world. We currently have nine communities
-    of practice. These include:
+    of practice. These include: Delivery Management, Research & Design,
+    Product, Engineering, Data, Procurement, Transformation, Accessibility, and
+    Internet of Things.
   </p>
-
-  <ul>
-    <li><b>Delivery Management</b>, led by <a href="/company/about/#victor-zapanta">Sally Paul</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
-    <li><b>Research & Design</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
-    <li><b>Product</b>, led by <a href="/company/about/#victor-zapanta">Sally Paul</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
-    <li><b>Engineering</b>, led by <a href="/company/about/#victor-zapanta">Sally Paul</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
-    <li><b>Data</b>, led by <a href="/company/about/#victor-zapanta">Sally Paul</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
-    <li><b>Procurement</b>, led by <a href="/company/about/#chris-cairns">Chris Cairns</a> (<a href="mailto:chris@skylight.digital">chris@skylight.digital)</a></li>
-    <li><b>Transformation</b>, led by <a href="/company/about/#victor-zapanta">Sally Paul</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
-    <li><b>Accessibility</b>, led by <a href="/company/about/#nick-bristow">Nick Bristow</a> (<a href="mailto:nick@skylight.digital">nick@skylight.digital)</a></li>
-    <li><b>Internet of Things</b>, led by <a href="/company/about/#geoff-mulligan">Geoff Mulligan</a> (<a href="mailto:geoff@skylight.digital">geoff@skylight.digital)</a></li>
-  </ul>
 
 </div>
 
