add case study tags

--- a/_projects/adopta_agency.html
+++ b/_projects/adopta_agency.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 160
 display: true
-tags: [service delivery, kin lane]
+tags: [service delivery, apis, open government, kin lane]
 excerpt: A civic movement designed to encourage people to "adopt" government's open datasets, and improve the way these datasets are shared with the public.
 project_members:
   - kin-lane
