--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 150
 display: true
-tags: [procurement, chris cairns, shashank khandelwal]
+tags: [procurement, training, coaching & training, chris cairns, shashank khandelwal]
 excerpt: A pilot training program designed to accelerate the development of digital acquisition experts across government.
 project_members:
   - chris-cairns
