--- a/_projects/us_navy_protosketching.html
+++ b/_projects/us_navy_protosketching.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 120
 display: true
-tags: [microconsulting, robert read, tom black]
+tags: [microconsulting, research & design, product management, defense, navy, robert read, tom black]
 excerpt: Empowering the U.S. Navy to make critical design and technology decisions through a unique form of rapid prototyping.
 project_members:
   - robert-read
