--- a/_projects/va_api_developer_outreach.html
+++ b/_projects/va_api_developer_outreach.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 90
 display: true
-tags: [microconsulting, apis, kin lane, chris cairns]
+tags: [microconsulting, apis, open government, veterans, kin lane, chris cairns]
 excerpt: Helping the Veterans Affairs increase adoption of their APIs through insight into current best practices for API developer outreach.
 project_members:
   - kin-lane
