--- a/_projects/va_mobile_product_strategy.html
+++ b/_projects/va_mobile_product_strategy.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 20
 display: true
-tags: [microconsulting, apis, sean johnson, chris cairns]
+tags: [microconsulting, apis, veterans, healthcare, sean johnson, chris cairns]
 excerpt: A product strategy for improving the mobile user experience of VA.gov.
 project_members:
   - sean-johnson
