--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -44,10 +44,10 @@ preload: hero-contracting.svg
     <li>Microservices & Evolutionary Architecture</li>
     <li>DevOps</li>
     <li>Cloud & Platform Engineering</li>
-    <li>Open Data & APIs</li>
+    <li>APIs</li>
     <li>Data & Analytics</li>
     <li>Artificial Intelligence & Machine Learning</li>
-    <li>Open Source</li>
+    <li>Open Government</li>
     <li>Security & Privacy</li>
     <li>Internet of Things</li>
     <li>Product Management</li>
