--- a/_projects/dol_legacy_system_modernization.html
+++ b/_projects/dol_legacy_system_modernization.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 80
 display: true
-tags: [service delivery, robert read, chris cairns]
+tags: [procurement, legacy modernization, labor, robert read, chris cairns]
 excerpt: Using code forensics and modern API practices to dramatically de-risk the modernization of a legacy system at the Department of Labor.
 project_members:
   - robert-read
