--- a/_projects/everify_modernization.html
+++ b/_projects/everify_modernization.html
@@ -11,7 +11,7 @@ feature_image:
 feature_image_description:
 order: 7
 display: true
-tags: [service delivery, josh dorothy, nick bristow, jay danielian]
+tags: [service delivery, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, security & privacy, homeland security, citizenship & immigration, josh dorothy, nick bristow, jay danielian]
 excerpt: A modernized digital service for employers to confirm the eligibility of their employees to work in the U.S.
 project_members:
   - josh-dorothy
