--- a/_projects/va_api_scorecard_mvp.html
+++ b/_projects/va_api_scorecard_mvp.html
@@ -12,7 +12,7 @@ feature_image_description:
 feature_image_shadow:
 order: 40
 display: true
-tags: [microconsulting, apis, victor zapanta, nick bristow, kin lane, robert read, chris cairns]
+tags: [microconsulting, apis, open government, victor zapanta, nick bristow, kin lane, robert read, chris cairns]
 excerpt: A minimum viable product enabling the Veterans Affairs to start learning how best to govern their growing portfolio of APIs.
 project_members:
   - victor-zapanta
