--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -60,9 +60,9 @@ preload: hero-contracting.svg
 
   <h2>Contracting pathways and vehicles</h2>
   <ul>
-    <li>GSA IT Schedule 70 (47QTCA18D00D0) &ndash; accessible to all federal, state, and local governments</li>
-    <li>SBA-certified <a href="https://www.sba.gov/partners/contracting-officials/contracting-program-administration/hubzone-administration">HUBZone company</a> &ndash; eligible for sole-source contracts</li>
-    <li>U.S. Air Force SBIR Phase II (FA864919CA079) &ndash; eligible for sole-source contracts and accessible to any federal agency</li>
+    <li>GSA IT Schedule 70 (47QTCA18D00D0) &mdash; accessible to all federal, state, and local governments</li>
+    <li>SBA-certified <a href="https://www.sba.gov/partners/contracting-officials/contracting-program-administration/hubzone-administration">HUBZone company</a> &mdash; eligible for sole-source contracts</li>
+    <li>U.S. Air Force SBIR Phase II (FA864919CA079) &mdash; eligible for sole-source contracts and accessible to any federal agency</li>
     <li>California Agile Vendor Pool<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
     <li>DHS Services for Enabling Agile Delivery (SEAD)<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
     <li>CMS Enterprise Agile Transformation Services (EATS)<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
