Fix DITAP banner section appearance

--- a/pages/trainings/ditap-apply.html
+++ b/pages/trainings/ditap-apply.html
@@ -10,7 +10,7 @@ redirect_from:
   hero_title = 'Submit Your Application'
   hero_content = "You're one step closer to mastering the art of digital acquisition!"
   color = 'blue'
-  image = 'hero-training-single.svg'
+  image = 'hero-training.svg'
 %}
 
 <div class="ditap-apply">
