--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -11,7 +11,7 @@ class_1_spots:
 class_2_spots:
 ---
 
-<div class="hero bg-blue"
+<div class="hero hero-banner bg-blue"
     style="
       background-image: url(/img/hero-training-single.svg);
       background-repeat: no-repeat;
