fix broken link

--- a/pages/join.html
+++ b/pages/join.html
@@ -38,7 +38,7 @@ preload: hero-join-us.svg
           We're more than a company. We represent a movement to reinvent how the
           government serves families, patients, veterans, immigrants, and many others
           in today's digital world. Everything about us &mdash; our structure,
-          <a href="/about/values/">values</a>, <a href="/work/services/">services</a>,
+          <a href="/company/values/">values</a>, <a href="/work/services/">services</a>,
           <a href="/work/experience/">work</a>, <a href="/thoughts/blog/">thoughts</a>,
           and <a href="/company/about/">team</a> &mdash; is designed with that purpose in mind.
         </p>
