--- a/pages/join.html
+++ b/pages/join.html
@@ -74,7 +74,7 @@ preload: hero-join-us.svg
               inspired and talented folks in the industry."
             </p>
 
-            <p><i><b>Charlye Delgado,</b> UX Researcher</i></p>
+            <p><i><b>Charlye Delgado,</b> Product Manager</i></p>
           </div>
         </div>
 
