copy for training page

--- a/pages/training.html
+++ b/pages/training.html
@@ -6,16 +6,25 @@ preload: hero-training.svg
 ---
 
 {% include hero_banner.html
-  hero_content = 'Training tagline'
+  hero_content = 'Get the skills you need to make government work in a digital world.'
   color = 'blue'
   image = 'hero-training.svg'
 %}
 
 <div class="container container-lg prose">
-  <h2>Digital Acquisition Training for Executives </h2>
-  <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
   <h2>Digital IT Acquisition Professional (DITAP) Training</h2>
+  <p>
+    Become a certified digial acquisition professional
+    through our expert-led, 6-month, part-time course.
+  </p>
   <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/ditap/">Learn more</a>
+
+  <h2>Digital IT Acquisition Professional (DITAP) Training &mdash; Executive Edition</h2>
+  <p>
+    Learn how to lead your agency into the world of modern procurement
+    through a condensed, 1-day version of our 6-month DITAP program.
+  </p>
+  <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
 </div>
 
 {% include get_expert_answers_cta.html %}
