--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -21,7 +21,7 @@ class_2_spots:
     <div class="row">
       <div class="col-12 col-lg-8 offset-lg-2">
         <h1 class="hero-heading text-shadow">Digital IT Acquisition Professional (DITAP) Training</h1>
-        <p class="hero-content text-shadow">Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course. Upon completion, you'll earn the Federal Acquisition Certification in Contracting Core-Plus Specialization in Digital Services and up to 80 Continuous Learning Points.</p>
+        <p class="hero-content text-shadow">Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course. Upon completion, you'll earn the Federal Acquisition Certification in Contracting Core-Plus Specialization in Digital Services (FAC-C-DS) and up to 80 Continuous Learning Points.</p>
         <div class="hero-btn-group mt-2">
           <div class="hero-btn-wrapper pr-1">
             <a class="btn btn-warning text-dark mr-2 mt-md-3" href="/work/services/training/ditap/apply">Apply now →</a>
