Style training page

--- a/pages/training.html
+++ b/pages/training.html
@@ -12,19 +12,29 @@ preload: hero-training.svg
 %}
 
 <div class="container container-lg prose">
-  <h2>Digital IT Acquisition Professional (DITAP) Training</h2>
-  <p>
-    Become a certified digial acquisition professional
-    through our expert-led, 6-month, part-time course.
-  </p>
-  <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/ditap/">Learn more</a>
+  <div class="row">
+    <div class="col-md-6 d-flex align-items-stretch">
+      <div class="toolkit-item p-5">
+        <h2 class="h3">Digital IT Acquisition Professional (DITAP) Training</h2>
+        <p>
+          Become a certified digial acquisition professional
+          through our expert-led, 6-month, part-time course.
+        </p>
+        <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/ditap/">Learn more</a>
+      </div>
+    </div>
 
-  <h2>Digital IT Acquisition Professional (DITAP) Training &mdash; Executive Edition</h2>
-  <p>
-    Learn how to lead your agency into the world of modern procurement
-    through a condensed, 1-day version of our 6-month DITAP program.
-  </p>
-  <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
+    <div class="col-md-6 d-flex align-items-stretch">
+      <div class="toolkit-item p-5">
+        <h2 class="h3">Digital IT Acquisition Professional (DITAP) Training &mdash; Executive Edition</h2>
+        <p>
+          Learn how to lead your agency into the world of modern procurement
+          through a condensed, 1-day version of our 6-month DITAP program.
+        </p>
+        <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
+      </div>
+    </div>
+  </div>
 </div>
 
 {% include get_expert_answers_cta.html %}
