--- a/pages/training.html
+++ b/pages/training.html
@@ -14,24 +14,32 @@ preload: hero-training.svg
 <div class="container container-lg prose">
   <div class="row">
     <div class="col-md-6 d-flex align-items-stretch">
-      <div class="toolkit-item p-5">
-        <h2 class="h3">Digital IT Acquisition Professional (DITAP) Training</h2>
-        <p>
-          Become a certified digial acquisition professional
-          through our expert-led, 6-month, part-time course.
-        </p>
-        <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/ditap/">Learn more</a>
+      <div class="training-item toolkit-item p-5">
+        <div class="training-item--content">
+          <h2 class="h3">Digital IT Acquisition Professional (DITAP) Training</h2>
+          <p>
+            Become a certified digial acquisition professional
+            through our expert-led, 6-month, part-time course.
+          </p>
+        </div>
+        <div>
+          <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/ditap/">Learn more</a>
+        </div>
       </div>
     </div>
 
     <div class="col-md-6 d-flex align-items-stretch">
-      <div class="toolkit-item p-5">
-        <h2 class="h3">Digital IT Acquisition Professional (DITAP) Training &mdash; Executive Edition</h2>
-        <p>
-          Learn how to lead your agency into the world of modern procurement
-          through a condensed, 1-day version of our 6-month DITAP program.
-        </p>
-        <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
+      <div class="training-item toolkit-item p-5">
+        <div class="training-item--content">
+          <h2 class="h3">Digital IT Acquisition Professional (DITAP) Training &mdash; Executive Edition</h2>
+          <p>
+            Learn how to lead your agency into the world of modern procurement
+            through a condensed, 1-day version of our 6-month DITAP program.
+          </p>
+        </div>
+        <div>
+          <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
+        </div>
       </div>
     </div>
   </div>
