Add spacing above training item

--- a/pages/training.html
+++ b/pages/training.html
@@ -28,7 +28,7 @@ preload: hero-training.svg
       </div>
     </div>
 
-    <div class="col-md-6 d-flex align-items-stretch">
+    <div class="col-md-6 d-flex align-items-stretch mt-5 mt-md-0">
       <div class="training-item toolkit-item p-5">
         <div class="training-item--content">
           <h2 class="h3">Digital IT Acquisition Professional (DITAP) Training &mdash; Executive Edition</h2>
