Add DITAP Executive page

--- a/pages/training.html
+++ b/pages/training.html
@@ -38,7 +38,7 @@ preload: hero-training.svg
           </p>
         </div>
         <div>
-          <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
+          <a class="btn btn-primary-dark font-weight-bold" href="/work/services/training/ditap-executive/">Learn more</a>
         </div>
       </div>
     </div>
