--- a/pages/experience.html
+++ b/pages/experience.html
@@ -61,7 +61,7 @@ pagination:
             </div>
             <div class="project-footer">
               <a href="{{item.permalink}}" tabindex="0">
-                <span class="align-middle">Read more</span><i class="fa fa-chevron-right" aria-hidden="true"></i>
+                <span>Read more</span><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </div>
           </div>
