--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -45,7 +45,7 @@ class_2_spots:
             <li><a class="nav-link" href="#learning-experience">Learning experience</a></li>
             <li><a class="nav-link" href="#curriculum">Curriculum</a></li>
             <li><a class="nav-link" href="#instructors">Instructors</a></li>
-            <li><a class="nav-link" href="#tuition-and-dates">Tuition and dates</a></li>
+            <li><a class="nav-link" href="#tuition-and-dates">Dates and tuition</a></li>
             <li><a class="nav-link" href="#faqs">FAQs</a></li>
           </ul>
         </nav>
@@ -183,7 +183,7 @@ class_2_spots:
         </div>
       </div>
 
-      <h2 id="tuition-and-dates">Tuition and dates</h2>
+      <h2 id="tuition-and-dates">Dates and tuition</h2>
       <a href="/work/services/training/ditap/apply/?date=1" class="row tuition-card no-gutters mt-4">
         <div class="col-12">
           <h3 class="class-heading">August 5, 2020 to February 11, 2021</h3>
