--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Digital IT Acquisition Professional (DITAP) Training – Executive Edition"
+title: "Digital IT Acquisition Professional (DITAP) Training &mdash; Executive Edition"
 permalink: /work/services/training/ditap-executive/
 excerpt: Learn how to transform the way your agency procures modern technology products and services through a condensed, 1-day version of our 6-month DITAP training program.
 tags: [digital acquisition training, agile acquisition training]
@@ -40,11 +40,11 @@ class_2_spots:
             <li><a class="nav-link" href="#learning-experience">Learning experience</a></li>
             <li><a class="nav-link" href="#curriculum">Curriculum</a></li>
             <li><a class="nav-link" href="#instructors">Instructors</a></li>
-            <li><a class="nav-link" href="#tuition-and-dates">Tuition and dates</a></li>
+            <li><a class="nav-link" href="#tuition-and-dates">Dates and cost</a></li>
             <li><a class="nav-link" href="#faqs">FAQs</a></li>
           </ul>
         </nav>
-        <a class="btn btn-primary-dark font-weight-bold mt-2" href="/work/services/training/ditap/apply">Register now →</a>
+        <a class="btn btn-primary-dark font-weight-bold mt-2" href="#0">Register now →</a>
       </div>
     </div>
 
@@ -121,7 +121,7 @@ class_2_spots:
           </div>
           <div class="col-12 col-lg-4 d-none d-md-block">
             <div class="course-cta card border p-4">
-              <p>Want to know more about our course?</p>
+              <p>Ready to get started?</p>
               <p class="mt-3">
                 <a href="#0">Register now →</a>
               </p>
@@ -178,10 +178,10 @@ class_2_spots:
         </div>
       </div>
 
-      <h2 id="tuition-and-dates">Tuition and dates</h2>
-      <a href="/work/services/training/ditap/apply/?date=1" class="row tuition-card no-gutters mt-4">
+      <h2 id="tuition-and-dates">Dates and cost</h2>
+      <a href="#0" class="row tuition-card no-gutters mt-4">
         <div class="col-12">
-          <h3 class="class-heading">Thu, July 24, 9:00 AM – 5:00 PM ET</h3>
+          <h3 class="class-heading">Thu, July 24, 9:00 AM &ndash; 5:00 PM ET</h3>
           {% if page.class_1_spots %}
             <div class="class-spots">
               <span>{{ page.class_1_spots }} spots left</span>
@@ -193,13 +193,13 @@ class_2_spots:
             <p><strong>Cost:</strong> $1,250 USD</p>
           </div>
           <p class="mt-2">
-            <strong class="tuition-card-link">Apply now →</strong>
+            <strong class="tuition-card-link">Register now →</strong>
           </p>
         </div>
       </a>
-      <a href="/work/services/training/ditap/apply/?date=1" class="row tuition-card no-gutters mt-4">
+      <a href="#0" class="row tuition-card no-gutters mt-4">
         <div class="col-12">
-          <h3 class="class-heading">Thu, August 28, 9:00 AM – 5:00 PM ET</h3>
+          <h3 class="class-heading">Thu, August 28, 9:00 AM &ndash; 5:00 PM ET</h3>
           {% if page.class_2_spots %}
             <div class="class-spots">
               <span>{{ page.class_2_spots }} spots left</span>
@@ -211,7 +211,7 @@ class_2_spots:
             <p><strong>Cost:</strong> $1,250 USD</p>
           </div>
           <p class="mt-2">
-            <strong class="tuition-card-link">Apply now →</strong>
+            <strong class="tuition-card-link">Register now →</strong>
           </p>
         </div>
       </a>
@@ -225,19 +225,19 @@ class_2_spots:
       {% include accordion.html accordion_header = 'Where did DITAP come from?' accordion_body = accordion_body accordion_index = '1' %}
 
       {% capture accordion_body %}
-      <p>To achieve mission success in today’s digital world, agencies must master the art of digital acquisition. Leaders arguably play the most important role in making this transition happen, but need to manage their time carefully. We’ve taken the core elements from our longer, 6-month DITAP course and distilled it into an executive-level, crash-course summary — perfect for those who need a learning experience that gets right to the point.</p>
+      <p>To achieve mission success in today’s digital world, agencies must master the art of digital acquisition. Leaders arguably play the most important role in making this transition happen, but need to manage their time carefully. We’ve taken the core elements from our longer, 6-month DITAP course and distilled it into an executive-level, crash-course summary &mdash; perfect for those who need a learning experience that gets right to the point.</p>
       {% endcapture %}
 
       {% include accordion.html accordion_header = 'Why make a condensed DITAP course for executives?' accordion_body = accordion_body accordion_index = '2' %}
 
       {% capture accordion_body %}
-      <p>This course is designed primarily for agency leaders and executives who need a “Cliff Notes” version of our longer, more in-depth DITAP course. But that’s not to say this course is only for executives. Anyone plays a role in the lifecycle of an acquisition (for example, finance officer, legal counsellor, procurement officer, program manager, or technical manager) and needs a crash-course tour of modern digital acquisition will benefit greatly from this training.</p>
+      <p>This course is designed primarily for agency leaders and executives who need a "Cliff Notes" version of our longer, more in-depth DITAP course. But that’s not to say this course is only for executives. Anyone plays a role in the lifecycle of an acquisition (for example, finance officer, legal counsellor, procurement officer, program manager, or technical manager) and needs a crash-course tour of modern digital acquisition will benefit greatly from this training.</p>
       {% endcapture %}
 
       {% include accordion.html accordion_header = 'Is this course for someone like me?' accordion_body = accordion_body accordion_index = '3' %}
 
       {% capture accordion_body %}
-      <p>None! Any amount of familiarity with modern practices and technologies will be helpful, but this course is designed to give you an introduction to the fundamentals of modern digital acquisition. As such, we don’t assume you come in with any more knowledge than maybe hearing the word “agile” a couple times.</p>
+      <p>None! Any amount of familiarity with modern practices and technologies will be helpful, but this course is designed to give you an introduction to the fundamentals of modern digital acquisition. As such, we don’t assume you come in with any more knowledge than maybe hearing the word "agile" a couple times.</p>
       {% endcapture %}
 
       {% include accordion.html accordion_header = 'What are the prerequisites for taking this course?' accordion_body = accordion_body accordion_index = '4' %}
