DITAP style updates

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -24,10 +24,10 @@ class_2_spots:
         <p class="hero-content text-shadow">Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course. Upon completion, you'll earn the Federal Acquisition Certification in Contracting Core-Plus Specialization in Digital Services (FAC-C-DS) and up to 80 Continuous Learning Points.</p>
         <div class="hero-btn-group mt-2">
           <div class="hero-btn-wrapper pr-1">
-            <a class="btn btn-warning text-dark mr-2 mt-md-3" href="/work/services/training/ditap/apply">Apply now →</a>
+            <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="/work/services/training/ditap/apply">Apply now →</a>
           </div>
           <div class="hero-btn-wrapper pl-1">
-            <a class="btn btn-outline-light mt-md-3" href="/assets/Skylight-DITAP-Syllabus.pdf">Read syllabus</a>
+            <a class="btn btn-outline-light mt-sm-3" href="/assets/Skylight-DITAP-Syllabus.pdf">Read syllabus</a>
           </div>
         </div>
       </div>
