--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -22,7 +22,7 @@ class_2_spots:
         <p class="hero-content text-shadow">{{ page.excerpt }}</p>
         <div class="hero-btn-group mt-2">
           <div class="hero-btn-wrapper pr-1">
-            <a class="btn btn-warning text-dark mr-2 mt-md-3" href="#0">Register now →</a>
+            <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="#0">Register now →</a>
           </div>
         </div>
       </div>
