--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -51,7 +51,7 @@ class_2_spots:
     <div class="col-12 col-md-9 text">
       <div class="mt-5">
         <h2 class="" id="overview">Become a digital acquisition leader</h2>
-        <p class="text-intro">Learn what it takes to transform how your agency procures in today’s digital world.</p>
+        <p class="text-intro">Learn what it takes to transform how your agency procures in today's digital world.</p>
 
         <div class="text-grid row">
           <div class="col-12 col-lg-4">
@@ -91,7 +91,7 @@ class_2_spots:
           </div>
           <div class="col-12 col-lg-9">
             <h3>Focused learning</h3>
-            <p>Through a suite of presentation material, case studies, focused discussions, and our team’s expertise, you’ll learn the essentials of digital acquisition and how to transform the way your agency procures.</p>
+            <p>Through a suite of presentation material, case studies, focused discussions, and our team's expertise, you'll learn the essentials of digital acquisition and how to transform the way your agency procures.</p>
           </div>
         </div>
 
@@ -225,26 +225,26 @@ class_2_spots:
       {% include accordion.html accordion_header = 'Where did DITAP come from?' accordion_body = accordion_body accordion_index = '1' %}
 
       {% capture accordion_body %}
-      <p>To achieve mission success in today’s digital world, agencies must master the art of digital acquisition. Leaders arguably play the most important role in making this transition happen, but need to manage their time carefully. We’ve taken the core elements from our longer, 6-month DITAP course and distilled it into an executive-level, crash-course summary &mdash; perfect for those who need a learning experience that gets right to the point.</p>
+      <p>To achieve mission success in today's digital world, agencies must master the art of digital acquisition. Leaders arguably play the most important role in making this transition happen, but need to manage their time carefully. We've taken the core elements from our longer, 6-month DITAP course and distilled it into an executive-level, crash-course summary &mdash; perfect for those who need a learning experience that gets right to the point.</p>
       {% endcapture %}
 
       {% include accordion.html accordion_header = 'Why make a condensed DITAP course for executives?' accordion_body = accordion_body accordion_index = '2' %}
 
       {% capture accordion_body %}
-      <p>This course is designed primarily for agency leaders and executives who need a "Cliff Notes" version of our longer, more in-depth DITAP course. But that’s not to say this course is only for executives. Anyone plays a role in the lifecycle of an acquisition (for example, finance officer, legal counsellor, procurement officer, program manager, or technical manager) and needs a crash-course tour of modern digital acquisition will benefit greatly from this training.</p>
+      <p>This course is designed primarily for agency leaders and executives who need a "Cliff Notes" version of our longer, more in-depth DITAP course. But that's not to say this course is only for executives. Anyone plays a role in the lifecycle of an acquisition (for example, finance officer, legal counsellor, procurement officer, program manager, or technical manager) and needs a crash-course tour of modern digital acquisition will benefit greatly from this training.</p>
       {% endcapture %}
 
       {% include accordion.html accordion_header = 'Is this course for someone like me?' accordion_body = accordion_body accordion_index = '3' %}
 
       {% capture accordion_body %}
-      <p>None! Any amount of familiarity with modern practices and technologies will be helpful, but this course is designed to give you an introduction to the fundamentals of modern digital acquisition. As such, we don’t assume you come in with any more knowledge than maybe hearing the word "agile" a couple times.</p>
+      <p>None! Any amount of familiarity with modern practices and technologies will be helpful, but this course is designed to give you an introduction to the fundamentals of modern digital acquisition. As such, we don't assume you come in with any more knowledge than maybe hearing the word "agile" a couple times.</p>
       {% endcapture %}
 
       {% include accordion.html accordion_header = 'What are the prerequisites for taking this course?' accordion_body = accordion_body accordion_index = '4' %}
 
       {% capture accordion_body %}
-      <p>Our default method of administering this course is remote. After you register, you’ll be given a Zoom weblink to join the meeting. We recommend that you download the Zoom web-based application prior to joining class.</p>
-      <p>Remove course delivery isn’t the only option, however. While we’ve designed the course to be virtual so that anyone, anywhere can sign up to learn about digital acquisition, we love to administer in-person training, too. If you’d like to schedule an in-person training for your organization, please <a href="mailto:training@skylight.digital">reach out to us</a>.</p>
+      <p>Our default method of administering this course is remote. After you register, you'll be given a Zoom weblink to join the meeting. We recommend that you download the Zoom web-based application prior to joining class.</p>
+      <p>Remove course delivery isn't the only option, however. While we've designed the course to be virtual so that anyone, anywhere can sign up to learn about digital acquisition, we love to administer in-person training, too. If you'd like to schedule an in-person training for your organization, please <a href="mailto:training@skylight.digital">reach out to us</a>.</p>
       {% endcapture %}
 
       {% include accordion.html accordion_header = 'How is this course delivered?' accordion_body = accordion_body accordion_index = '5' %}
@@ -275,10 +275,21 @@ class_2_spots:
       {% include accordion.html accordion_header = 'Who else will be attending this course with me?' accordion_body = accordion_body accordion_index = '8' %}
 
       {% capture accordion_body %}
-      <p>Each course requires a minimum of 15 participants. The run dates are contingent upon meeting this minimum.</p>
+      <p>Each course requires a minimum of 15 participants. The run dates are contingent upon meeting this minimum. You'll be refunded 100% of the registration cost in the event that we cancel the course.</p>
       {% endcapture %}
 
       {% include accordion.html accordion_header = 'Is the course guaranteed to run if I sign-up?' accordion_body = accordion_body accordion_index = '9' %}
+
+      {% capture accordion_body %}
+      <ul>
+        <li>You can submit a cancellation request 10 business days or more prior to the start of the course and receive a full refund.</li>
+        <li>If you submit a cancellation request fewer than 10 business days prior to the start of the course, you'll be issued a credit toward a future Skylight training course. The credit will be equal to the amount paid for the initial course less any applicable fees.</li>
+        <li>Should Skylight cancel the course for any reason, you'll be refunded 100% of the registration cost.</li>
+      </ul>
+      {% endcapture %}
+
+      {% include accordion.html accordion_header = "What's the cancellation policy?" accordion_body = accordion_body accordion_index = '10' %}
+
     </div>
   </div>
 </div>
