--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -22,7 +22,7 @@ class_2_spots:
         <p class="hero-content text-shadow">{{ page.excerpt }}</p>
         <div class="hero-btn-group mt-2">
           <div class="hero-btn-wrapper pr-1">
-            <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="#0">Register now →</a>
+            <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308">Register now →</a>
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@ class_2_spots:
             <li><a class="nav-link" href="#faqs">FAQs</a></li>
           </ul>
         </nav>
-        <a class="btn btn-primary-dark font-weight-bold mt-2" href="#0">Register now →</a>
+        <a class="btn btn-primary-dark font-weight-bold mt-2" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308">Register now →</a>
       </div>
     </div>
 
@@ -123,7 +123,7 @@ class_2_spots:
             <div class="course-cta card border p-4">
               <p>Ready to get started?</p>
               <p class="mt-3">
-                <a href="#0">Register now →</a>
+                <a href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308">Register now →</a>
               </p>
             </div>
           </div>
@@ -179,7 +179,7 @@ class_2_spots:
       </div>
 
       <h2 id="tuition-and-dates">Dates and cost</h2>
-      <a href="#0" class="row tuition-card no-gutters mt-4">
+      <a href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308" class="row tuition-card no-gutters mt-4">
         <div class="col-12">
           <h3 class="class-heading">Thu, July 23, 9:00 AM &ndash; 5:00 PM ET</h3>
           {% if page.class_1_spots %}
@@ -188,16 +188,16 @@ class_2_spots:
             </div>
           {% endif %}
           <div class="tuition-card-meta mt-3">
-            <p><strong>Location:</strong>Online</p>
+            <p><strong>Location:</strong> Online</p>
             <p><strong>Instructors:</strong> Chris Cairns, Dan Levenson, Robert Read, and Lara Kohl</p>
-            <p><strong>Cost:</strong>$750 USD</p>
+            <p><strong>Cost:</strong> $750 USD</p>
           </div>
           <p class="mt-2">
             <strong class="tuition-card-link">Register now →</strong>
           </p>
         </div>
       </a>
-      <a href="#0" class="row tuition-card no-gutters mt-4">
+      <a href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308" class="row tuition-card no-gutters mt-4">
         <div class="col-12">
           <h3 class="class-heading">Thu, August 27, 9:00 AM &ndash; 5:00 PM ET</h3>
           {% if page.class_2_spots %}
@@ -206,9 +206,9 @@ class_2_spots:
             </div>
           {% endif %}
           <div class="tuition-card-meta mt-3">
-            <p><strong>Location:</strong>Online</p>
+            <p><strong>Location:</strong> Online</p>
             <p><strong>Instructors:</strong> Chris Cairns, Dan Levenson, Robert Read, and Lara Kohl</p>
-            <p><strong>Cost:</strong>$750 USD</p>
+            <p><strong>Cost:</strong> $750 USD</p>
           </div>
           <p class="mt-2">
             <strong class="tuition-card-link">Register now →</strong>
