--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -251,7 +251,7 @@ class_2_spots:
 
       {% capture accordion_body %}
       <ul>
-        <li>Access to all course materials and our online learning platform.</li>
+        <li>Access to all course materials.</li>
         <li>Course certificate of completion.</li>
       </ul>
       {% endcapture %}
