Use chevron style arrows for right arrows on DITAP

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -24,7 +24,7 @@ class_2_spots:
         <p class="hero-content text-shadow">Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course. Upon completion, you'll earn the Federal Acquisition Certification in Contracting Core-Plus Specialization in Digital Services (FAC-C-DS) and up to 80 Continuous Learning Points.</p>
         <div class="hero-btn-group mt-2">
           <div class="hero-btn-wrapper pr-1">
-            <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="/work/services/training/ditap/apply">Apply now →</a>
+            <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="/work/services/training/ditap/apply">Apply now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
           </div>
           <div class="hero-btn-wrapper pl-1">
             <a class="btn btn-outline-light mt-sm-3" href="/assets/Skylight-DITAP-Syllabus.pdf">Read syllabus</a>
@@ -49,7 +49,7 @@ class_2_spots:
             <li><a class="nav-link" href="#faqs">FAQs</a></li>
           </ul>
         </nav>
-        <a class="btn btn-primary-dark font-weight-bold mt-2" href="/work/services/training/ditap/apply">Apply now →</a>
+        <a class="btn btn-primary-dark font-weight-bold mt-2" href="/work/services/training/ditap/apply">Apply now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
       </div>
     </div>
 
@@ -128,7 +128,7 @@ class_2_spots:
             <div class="course-cta card border p-4">
               <p>Want to know more about our course?</p>
               <p class="mt-3">
-                <a href="/assets/Skylight-DITAP-Syllabus.pdf">Read syllabus →</a>
+                <a href="/assets/Skylight-DITAP-Syllabus.pdf">Read syllabus <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
               </p>
             </div>
           </div>
@@ -199,7 +199,7 @@ class_2_spots:
             <p><strong>Cost:</strong> $7,500 USD</p>
           </div>
           <p class="mt-2">
-            <strong class="tuition-card-link">Apply now →</strong>
+            <strong class="tuition-card-link">Apply now<i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></strong>
           </p>
         </div>
       </a>
