--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -22,7 +22,7 @@ class_2_spots:
         <p class="hero-content text-shadow">{{ page.excerpt }}</p>
         <div class="hero-btn-group mt-2">
           <div class="hero-btn-wrapper pr-1">
-            <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308">Register now →</a>
+            <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308">Register now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@ class_2_spots:
             <li><a class="nav-link" href="#faqs">FAQs</a></li>
           </ul>
         </nav>
-        <a class="btn btn-primary-dark font-weight-bold mt-2" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308">Register now →</a>
+        <a class="btn btn-primary-dark font-weight-bold mt-2" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308">Register now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
       </div>
     </div>
 
@@ -123,7 +123,7 @@ class_2_spots:
             <div class="course-cta card border p-4">
               <p>Ready to get started?</p>
               <p class="mt-3">
-                <a href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308">Register now →</a>
+                <a href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308">Register now<i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
               </p>
             </div>
           </div>
@@ -193,7 +193,7 @@ class_2_spots:
             <p><strong>Cost:</strong> $750 USD</p>
           </div>
           <p class="mt-2">
-            <strong class="tuition-card-link">Register now →</strong>
+            <strong class="tuition-card-link">Register now<i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></strong>
           </p>
         </div>
       </a>
@@ -211,7 +211,7 @@ class_2_spots:
             <p><strong>Cost:</strong> $750 USD</p>
           </div>
           <p class="mt-2">
-            <strong class="tuition-card-link">Register now →</strong>
+            <strong class="tuition-card-link">Register now<i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></strong>
           </p>
         </div>
       </a>
