--- a/pages/services.html
+++ b/pages/services.html
@@ -126,7 +126,7 @@ preload: hero-services.svg
       <div class="row">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
           <h2>Microconsulting</h2>
-          <p><b>Need immediate, high-impact support to address a problem or opportunity that doesn't require a full-blown engagement?</b> Our microconsulting services are designed specifically for that purpose, providing you with on-demand access to our expertise. They're also conveniently priced within the government's micropurchase threshold, which makes engaging with us just a “swipe of the credit card away.”</p>
+          <p><b>Need immediate, high-impact support to address a problem or opportunity that doesn't require a full-blown engagement?</b> Our microconsulting services are designed specifically for that purpose, providing you with on-demand access to our expertise. They're also conveniently priced within the government's micropurchase threshold, which makes engaging with us just a "swipe of the credit card away."</p>
           <a class="btn btn-primary-dark font-weight-bold" href="{{ page.cta }}">Engage now</a>
         </div>
         <div class="col-md-6 order-1 order-md-2">
