case study edit

--- a/_projects/ct_oec_website_redesign.html
+++ b/_projects/ct_oec_website_redesign.html
@@ -75,7 +75,7 @@ source_code_url:
 
   <p>
     Feedback from users made it clear that the site was hard to use and frustrating
-    for the audiences that need it the most: childcare providers, families,
+    for the audiences that need it the most &mdash; childcare providers, families,
     and even OEC staff. Some of the most pressing issues included outdated forms,
     confusing language, and a desktop-only experience.
   </p>
