case study edit

--- a/_projects/ct_oec_website_redesign.html
+++ b/_projects/ct_oec_website_redesign.html
@@ -137,7 +137,7 @@ source_code_url:
     </li>
 
     <li>
-      Continually receive positive user feedback
+      Have continually received positive user feedback
     </li>
 
     <li>
