Fix preload var on about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@ layout: default
 title: Team
 permalink: /company/about/
 redirect_from: /about/
-preload: hero-about-us.svg'
+preload: hero-about-us.svg
 ---
 
 {% include hero_banner.html
